--- a/views/fields/sub/popover.tt
+++ b/views/fields/sub/popover.tt
@@ -1,4 +1,4 @@
-<div class="popover-container">
+<div class="popover-container [% popover_class %]">
   <button
     class="popover__btn"
     type="button"
