--- a/views/tables/basic_row.tt
+++ b/views/tables/basic_row.tt
@@ -1,7 +1,8 @@
 [%
   row_class = row.class ? 'class="' _ row.class _ '"' : '';
+  data_attr = row.data_attr_name AND row.data_attr_value ? 'data-' _ row.data_attr_name _ '="' _ row.data_attr_value _ '"' : '';
 %]
-<tr [% row_class %]>
+<tr [% row_class; data_attr; %]>
   [%
     FOREACH field in row.fields;
       SWITCH field.type;
