--- a/views/tables/basic_table.tt
+++ b/views/tables/basic_table.tt
@@ -27,8 +27,10 @@
     pageLengthConfig = '"pageLength":' _  page_length _ ',';
   END;
 
-  IF table_length_menu;
+  IF table_length_menu == 'basic';
     pageLengthConfig = '"lengthMenu":[10,25,50,100,200],';
+  ELSIF table_length_menu == 'detail';
+    pageLengthConfig = '"lengthMenu":[[5,10,25,50,-1],[5,10,25,50,"All"]],';
   END;
 
   # create table columns and column config for each requested column.
@@ -119,9 +121,7 @@
     "dom": "' _ ( table_dom || '' ) _ '",
     "order":[' _ ( table_order || '[0,"asc"]' ) _ '],
     "language": ' _ ( table_language || '{"emptyTable": "There is no data available in this table"}' ) _ ',
-    "responsive":{
-      "details":{"type":"column","target":-1}
-    },
+    "responsive": ' _ ( table_unresponsive ? 'false' : '{"details":{"type":"column","target":-1}}' ) _ ',
     "scrollX":false,_ROW_REORDER_PAGE_LENGTH_LENGTH_MENU
     "autoWidth":false,_SHOW_ALL_RECORDS
     "columns":[
@@ -138,7 +138,7 @@
   table_config = table_config.replace('_COLUMNS', columnConfig);
   table_config = table_config.replace('_BUTTONS', buttonConfig);
 %]
-<table class="data-table table [% table_class %]" width="100%" data-config='[% table_config %]'>
+<table class="data-table table [% table_class %]"[% IF table_id %] id="[% table_id %]"[% END %] width="100%" data-config='[% table_config %]'>
   <thead>
     [% INCLUDE tables/basic_row.tt row=header_row %]
   </thead>
