--- a/views/topic.tt
+++ b/views/topic.tt
@@ -61,7 +61,7 @@
               <div class="row">
                 <div class='col'>
                   [%-
-                    INCLUDE fields/switch.tt
+                    INCLUDE fields/switch_single.tt
                       id            = "initial_state"
                       name          = "initial_state"
                       label         = "Initial state of  topic's fields when editing"
